# stock-watch-list-rest-fast-api-mysql

./: .env.example  .gitignore  Dockerfile  GOOGLE_OAUTH_SETUP.md  README.md  cleanup.sh  deploy.sh  docker-compose.yml  init.sql  pyproject.toml  requirements.txt  setup.sh  test-api.sh
.devcontainer/: devcontainer.json
.github/workflows/: deploy-docs.yml
app/: main.py
docs/: README.md  hugo-dev.sh  hugo.toml
docs/content/: _index.html
docs/content/api/: _index.md  authentication.md  public-endpoints.md  stock-management.md
docs/content/docs/: _index.md  architecture.md  oauth-setup.md  quick-start.md  testing.md  troubleshooting.md
docs/layouts/: index.html
docs/layouts/_default/: baseof.html  list.html  single.html
